css/main.css
@import "dracula.css";

:root {
  color-scheme: light dark;
}

.wrapper {
  color: var(--color);
  background-color: var(--background-color);
  margin: 0 auto;
  max-width: 50em;
  margin-bottom: 50px;
}
a {
  color: rgb(46, 67, 255);
  /* background-color: white;  */
}

code {
  /* background-color: #eee; */
  border-radius: 30px;
  font-family: courier, monospace;
  /* padding: 0 10px; */
  font-size: 14px;
  /* color: rgb(255, 255, 255); */
  /* max-width: 20em; */
}

img {
  max-width: 50em; 
  width: 100%;
}

html {
  height: 100%;
  margin: 0 auto;
  max-width: 50em;
  margin-bottom: 100px;
  padding-bottom: 1px;
  margin-top: 25px;
  /* border: 1px solid; */
}

body {
  /* margin: 0; */
  font-family: "Verdana";
  height: 100%;
  margin-bottom: 100px;
  font-size: 17px;
}
a {
  text-decoration: none;
  /* color: $accent; */
}
a:hover {
  text-decoration: underline;
}
hr {
  border: 0;
  height: 0;
  border-top: 1px solid rgba(0, 0, 0, 0.1);
  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
}

